# psdparse

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  pyproject.toml  vcpkg.json
.github/workflows/: wheels.yml
docs/: ARCHITECTURE.md  PYTHON_API.md  ROADMAP.md
psdparse/: CMakeLists.txt  bmp.cpp  psd_cli.cpp  psdbase.h  psddata.h  psddesc.cpp  psddesc.h  psdfile.cpp  psdfile.h  psdimage.cpp  psdlayer.cpp  psdparse.cpp  psdparse.h  psdresource.cpp  psdwrite.cpp  psdwrite.h  stdafx.h
python/: CMakeLists.txt  psdparse_module.cpp
tests/: conftest.py  test_header.py  test_images.py  test_layers.py  test_save.py
tools/: psd_export.py
