[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "psdparse"
version = "0.1.0"
description = "Fast PSD (Photoshop) reader/writer — C++17 core with pybind11 bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "wamsoft", email = "wtnbgo@gmail.com" }]
keywords = ["psd", "photoshop", "parser", "image", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.urls]
Homepage = "https://github.com/wamsoft/psdparse"
Repository = "https://github.com/wamsoft/psdparse"
Issues = "https://github.com/wamsoft/psdparse/issues"

[tool.scikit-build]
# CMake-driven build of the pybind11 extension. No vcpkg required: zlib is
# taken from the system if present, else fetched from source (see
# psdparse/CMakeLists.txt).
cmake.version = ">=3.16"
cmake.args = ["-DPSDPARSE_BUILD_PYTHON=ON"]
# the wheel content is the installed extension only (install() in
# python/CMakeLists.txt) — disable package auto-discovery so the C++ source
# directory `psdparse/` is NOT mistaken for a Python package.
wheel.packages = []
build-dir = "build/skbuild/{wheel_tag}"

[tool.scikit-build.sdist]
exclude = ["*.psd", "tests/data/", "build/", ".github/", ".pytest_cache/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
